<resources>
    <string name="app_name">Currency Converter</string>

    <string name="from_value_in">From Value in</string>
    <string name="to_value_in">To Value in</string>
    <string name="txtFill">0</string>
    <string name="calculate">Calculate</string>
    <string name="currency_list_view">Currency List View</string>
    <string name="text">Currency</string>
    <string name="refresh_rates">Refresh Rates</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="money">money</string>
    <string name="todo">TODO</string>
    <string name="reset_values">Reset Values</string>

    <string-array name="curr_arr">
        <item>EURO</item>
        <item>USD</item>
        <item>YEN</item>
    </string-array>

</resources>