<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_reset"
        android:icon="@drawable/ic_baseline_reset"
        android:title="@string/reset_values" />

    <item
        android:id="@+id/item_list"
        android:icon="@drawable/ic_currencylist"
        android:title="@string/currency_list_view" />

    <item
        android:id="@+id/item_update"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/refresh_rates" />


</menu>