<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListViewer">

    <ImageView
        android:id="@+id/currencyImgView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/currencyListView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/currencyExChangeView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:gravity="center"
        android:text="@string/money"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>